force-app/main/default/objects/exceptionConfig__mdt/exceptionConfig__mdt.object-meta.xml
<CustomObject>
    <description>agpl Updation</description>
    <label>ExceptionConfiguration</label>
    <pluralLabel>ExceptionConfigurations</pluralLabel>
</CustomObject>