force-app/main/default/objects/exceptionConfig__mdt/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <description>Account Group value</description>
    <label>Account Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>