force-app/main/default/objects/exceptionConfig__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>