force-app/main/default/objects/exceptionConfig__mdt/fields/PriceList__c.field-meta.xml
<CustomField>
    <fullName>PriceList__c</fullName>
    <description>PriceList value</description>
    <label>PriceList</label>
    <length>40</length>
    <type>Text</type>
</CustomField>